[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metpyx"
version = "1.0.0"
description = 'A collection of tools for x-ray metrology'
keywords = ["x-rays", "metrology", "ionizing radiation"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
  { name = "Xandra Campo", email = "xandra.campo@ciemat.es" }
]
maintainers = [
  { name = "Xandra Campo", email = "xandra.campo@ciemat.es" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/lmri-met/metpyx"
Documentation = "https://github.com/lmri-met/metpyx#readme"
Issues = "https://github.com/lmri-met/metpyx/issues"